--- a/Negotiation3/reports/resources.html
+++ b/Negotiation3/reports/resources.html
@@ -21,12 +21,25 @@
         <img src="image-8.png" width="125px" height="125px" class="img-circle">
 	</div>
 
+	<div style="height:15px">
+	</div>
+
+	<div>
+		<ul class="list-group" >
+		  <li class="list-group-item" style="font-size: 14px; text-align: left; border-top:0px">For free downloads of practice guides and research articles about the negotiation skills highlighted in this app (and about negotiation more generally), visit the <strong><a href="http://www.negotiation3-0.com/" class="alert-link" style="color: #ff9f33">Negotiation 3.0 Website</a></strong></li>
+		  <li class="list-group-item" style="font-size: 14px; text-align: left">Another excellent resource is the <strong><a href="http://www.pon.harvard.edu/" class="alert-link" style="color: #ff9f33">The Program on Negotiation</a></strong> based at the Harvard Law School</li>
+		  <li class="list-group-item" style="font-size: 14px; text-align: left">Michael Wheeler's <a href="https://itunes.apple.com/us/book/the-art-of-negotiation/id576508269?mt=11" class="alert-link" style="color: #ff9f33"><strong><i>The Art of Negotiation</i></strong></a> (especially the chapters on openings, critical moments, and closing)</li>
+		  <li class="list-group-item" style="font-size: 14px; text-align: left">David Lax and James Sebenius's <a href="https://itunes.apple.com/us/book/manager-as-negotiator/id381492420?mt=11" class="alert-link" style="color: #ff9f33"><strong><i>The Manager as Negotiator</i></strong></a> (in particular, the chapter on creating and claiming value)</li>
+		  <li class="list-group-item" style="font-size: 14px; text-align: left"><a href="http://www.amazon.com/Beyond-Winning-Negotiating-Create-Disputes/dp/0674012313" class="alert-link" style="color: #ff9f33"><strong><i>Beyond Winning</i></strong></a> (notably, the chapter on empathy and assertiveness), by Robert Mnookin, Scott Peppet, and Andrew Tulumello</li>
+		</ul>
+	</div>
+<!--
 	<div class="alert alert-info" style="margin:20px">
 		<div class="row">
 			<div class="col-xs-1" style="margin-right:10px">
 				<span data-icon="&#xe052;" style="font-size: 24px"></span>
 			</div>
-			<div class="col-xs-10" style="font-weight:400; line-height:1.14285714285714">
+			<div class="col-xs-10" >
 				For free downloads of practice guides and research articles about the negotiation skills highlighted in this app (and about negotiation more generally), visit the <strong><a href="http://www.negotiation3-0.com/" class="alert-link" style="color:#fff;text-decoration:underline">Negotiation 3.0 Website</a></strong>
 			</div>
 		</div>
@@ -75,7 +88,7 @@
 			</div>
 		</div>
 	</div>
-
+-->
 	<div style="height:100px">
 	</div>
 
