--- a/Negotiation3/reports/test1.html
+++ b/Negotiation3/reports/test1.html
@@ -20,7 +20,7 @@
 	<div align="center">
         <img src="image-4.png" width="125px" height="125px" class="img-circle">
 	</div>
-    <div style="margin:20px">
+    <div style="margin:-20px 20px 20px 20px">
 		<h4 style="font-weight:400">Part A</h4>
 	</div>
 	
