--- a/Negotiation3/reports/scorecard-results.html
+++ b/Negotiation3/reports/scorecard-results.html
@@ -5,105 +5,117 @@
             <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
             <link rel="stylesheet" href="css/style.css" type="text/css">
 			<link href="css/jquery.circliful.css" rel="stylesheet" type="text/css" />
-		  <style type="text/css">
+		    <style>
+		        .photo {
+		            margin: 10px;
+		        }
+		        body {
+		            background-position: top left;
+		            background-repeat: no-repeat;
+		            background-size: 100%;
+		        }
+					canvas{
+					  width: 100% !important;
+				      max-width: 280px;
+				      height: 100% !important;
+					}
 
+					header {
+					  position:absolute;
+					  z-index:0;
+					  top:0; left:0; right:0;
+					  height:10rem;
+					  transition:transform .5s, opacity .3s;
+					  background-size:cover;
+					}
 
-			header {
-			  position:absolute;
-			  z-index:0;
-			  top:0; left:0; right:0;
-			  height:10rem;
-			  transition:transform .5s, opacity .3s;
-			  background-size:cover;
-			}
+					.topcard {
+					  padding:1rem 1rem;
+					  box-shadow:0 1px 2px #aaa;
+					  background:white;
+					  margin: 1.5rem 1rem;
+					  border-radius:3px;
+					  background-image: url("top-banner-12.png");
+					  background-repeat: no-repeat;
+					  user-select:none;
+					  animation:fly-in-from-left .5s 1s ease both;
+					  transform-origin:top left;
+					}
+					.card {
+					  padding:1rem 1rem;
+					  box-shadow:0 1px 2px #aaa;
+					  background:white;
+					  margin: 1.5rem 1rem;
+					  border-radius:3px;
+					  user-select:none;
+					  animation:fly-in-from-left .5s 1s ease both;
+					  transform-origin:top left;
+					}
+					.card:nth-child(even){
+					  animation-name:fly-in-from-right;
+					  animation-delay:1.1s;
+					 transform-origin:top right;
+					}
 
-			.card {
-			  padding:1rem 0rem;
-			  box-shadow:0 1px 2px #aaa;
-			  background:white;
-			  margin: 1.5rem 1rem;
-			  border-radius:3px;
-			  user-select:none;
-			  animation:fly-in-from-left .5s 1s ease both;
-			  transform-origin:top left;
-			}
-			.card:nth-child(even){
-			  animation-name:fly-in-from-right;
-			  animation-delay:1.1s;
-			 transform-origin:top right;
-			}
+					@keyframes fly-in-from-left {
+					  from {
+					    transform:translateY(15rem) rotate(15deg);
+					    opacity:0;
+					  }
+					}
 
-			@keyframes fly-in-from-left {
-			  from {
-			    transform:translateY(15rem) rotate(15deg);
-			    opacity:0;
-			  }
-			}
+					@keyframes fly-in-from-right {
+					  from {
+					    transform:translateY(15rem) rotate(-15deg);
+					    opacity:0;
+					  }
+					}
 
-			@keyframes fly-in-from-right {
-			  from {
-			    transform:translateY(15rem) rotate(-15deg);
-			    opacity:0;
-			  }
-			}
+					.card:after {
+					  position:absolute;
+					  font-size:.9rem;
+					  top:1.5rem;
+					  right:1rem;
+					  border:thin solid gray;
+					  color:gray;
+					  width:1rem;
+					  line-height:1rem;
+					  text-align:center;
+					  border-radius:50%;
+					  pointer-events:none;
+					}
 
-			.card:after {
-			  position:absolute;
-			  font-size:.9rem;
-			  top:1.5rem;
-			  right:1rem;
-			  border:thin solid gray;
-			  color:gray;
-			  width:1rem;
-			  line-height:1rem;
-			  text-align:center;
-			  border-radius:50%;
-			  pointer-events:none;
-			}
-
-			h1 {
-			  font-size:2rem;
-			  font-weight:200;
-			}
-			  strong {
-			    font-weight:300;
-			    color:#539D00;
-			  }
-
-			h2 {
-			  font-size:.9rem;
-			  line-height:2.5;
-			  color:gray;
-			  font-weight:400;
-			}
-
-		  </style>
+					h1 {
+					  font-size:2rem;
+					  font-weight:200;
+					  margin-top:11px;
+					}
+					  strong {
+					    font-weight:500;
+					    color:#ff9f33;
+					  }
+					h2 {
+					  font-size:1.25rem;
+					  color:#ff9f33;
+					  font-weight:400;
+					  margin-top:0px;
+					}
+		    </style>
 
 
 <title></title>
 </head>
 	<body>
 		<section class="card">
-			<div class="row">
-				<div class="col-xs-7" style="margin-right:10px">
-					<span style="font-weight:400; font-size: 14px">Agreement Reached:</span>
-				</div>
-				<div class="col-xs-4" style="font-weight:800; font-size: 14px; line-height:1.14285714285714">
-					%@
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-xs-1" style="margin-right:10px">
-					<span style="font-weight:400; font-size: 14px">Type:</span>
-				</div>
-				<div class="col-xs-10" style="font-size: 14px; line-height:1.14285714285714">
-					%@
-				</div>
-			</div><br>
+				<p style="font-size: 18px">Agreement Reached <strong>%@</strong>
+				</p>
+				<p style="font-size: 14px">%@
+				</p>
+				<br>
 			<div class="row">
 				<div class="col-xs-6" style="margin-left:15px">
 					<div id="importance" data-dimension="80" data-text="%@" data-width="10" data-fontsize="20" data-percent="%@" data-fgcolor="#ff9f33" data-bgcolor="#eee"></div>
-					<span style="font-weight:400; font-size: 14px; margin-left:5px">Importance</span>
+					<span style="font-weight:400; font-size: 14px; font-size: 14px; margin-left:5px">Importance</span>
 				</div>
 				<div class="col-xs-5" style="font-size: 14px; line-height:1.14285714285714">
 					<div id="satisfaction" data-dimension="80" data-text="%@" data-width="10" data-fontsize="20" data-percent="%@" data-fgcolor="#ff9f33" data-bgcolor="#eee"></div>
