--- a/Negotiation3/reports/practices-performance.html
+++ b/Negotiation3/reports/practices-performance.html
@@ -644,11 +644,13 @@
 										var ctx = document.getElementById("canvas").getContext("2d");
 										window.myPieChart = new Chart(ctx).Pie(agreementPieData,{
 											responsive: true,
+											animateScale : false,
 											maintainAspectRatio: true
 										});
 										var ctx2 = document.getElementById("canvas2").getContext("2d");
 										window.myPieChart2 = new Chart(ctx2).Pie(typePieData,{
 											responsive: true,
+											animateScale : false,
 											maintainAspectRatio: true
 										});
 										var ctx3 = document.getElementById("canvas3").getContext("2d");
